# rules_python

./: .bazelrc  .editorconfig  CHANGELOG.md  CONTRIBUTING.md  MODULE.bazel  WORKSPACE  internal_dev_deps.bzl  internal_dev_setup.bzl
.bazelci/: presubmit.yml
docs/: BUILD.bazel  README.md  conf.py  devguide.md  environment-variables.md  gazelle.md  getting-started.md  index.md  pypi-dependencies.md  requirements.txt  support.md  toolchains.md
docs/pypi/: lock.md  use.md
examples/wheel/: test_publish.py  wheel_test.py
gazelle/: MODULE.bazel  README.md  deps.bzl  go.mod  go.sum
gazelle/internal/: smacker_BUILD.bazel
gazelle/python/: BUILD.bazel  configure.go  file_parser.go  file_parser_test.go  generate.go  kinds.go  parser.go  resolve.go  target.go
gazelle/python/testdata/import_with_same_srcs_library_and_binary/: BUILD.out  README.md
gazelle/python/testdata/import_with_same_srcs_library_and_binary/bar/: BUILD.in  BUILD.out  bar.py
gazelle/python/testdata/import_with_same_srcs_library_and_binary/foo/: BUILD.out
gazelle/python/testdata/relative_imports_package_mode/: BUILD.in  BUILD.out  README.md
gazelle/python/testdata/relative_imports_package_mode/package1/: BUILD.out
gazelle/python/testdata/relative_imports_package_mode/package1/subpackage1/subpackage2/: script.py
gazelle/python/testdata/relative_imports_project_mode/: README.md
gazelle/python/testdata/remove_invalid_binary/: BUILD.in  BUILD.out  WORKSPACE
gazelle/python/testdata/remove_invalid_binary/keep_binary/: BUILD.in  BUILD.out
gazelle/python/testdata/remove_invalid_pytest/: BUILD.in  README.md
gazelle/python/testdata/subdir_sources/: BUILD.in  BUILD.out
gazelle/python/testdata/subdir_sources/foo/has_main/: BUILD.out
gazelle/python/testdata/subdir_sources/foo/has_test/: BUILD.out
gazelle/pythonconfig/: pythonconfig.go
python/: BUILD.bazel  current_py_toolchain.bzl  features.bzl  packaging.bzl  versions.bzl
python/config_settings/: BUILD.bazel
python/private/: BUILD.bazel  attributes.bzl  common.bzl  config_settings.bzl  flags.bzl  hermetic_runtime_repo_setup.bzl  internal_dev_deps.bzl  local_runtime_repo.bzl  local_runtime_toolchains_repo.bzl  print_toolchain_checksums.bzl  py_console_script_binary.bzl  py_executable.bzl  py_info.bzl  py_library.bzl  py_repositories.bzl  py_runtime_info.bzl  py_runtime_rule.bzl  py_toolchain_suite.bzl  py_wheel.bzl  python.bzl  python_bootstrap_template.txt  python_register_toolchains.bzl  pythons_hub.bzl  repl_template.py  repo_utils.bzl  rule_builders.bzl  runtime_env_toolchain_interpreter.sh  semver.bzl  stage2_bootstrap_template.py  toolchains_repo.bzl  version.bzl
python/private/pypi/: BUILD.bazel  config_settings.bzl  env_marker_info.bzl  env_marker_setting.bzl  evaluate_markers.bzl  extension.bzl  generate_whl_library_build_bazel.bzl  hub_repository.bzl  namespace_pkgs.bzl  parse_requirements.bzl  pep508_deps.bzl  pep508_env.bzl  pep508_evaluate.bzl  pip_compile.bzl  (+9 more)
sphinxdocs/inventories/: bazel_inventory.txt
sphinxdocs/private/: sphinx.bzl
tests/base_rules/: py_executable_base_tests.bzl
tests/bootstrap_impls/: BUILD.bazel
tests/python/: python_tests.bzl
tests/repl/: BUILD.bazel  repl_test.py
tests/runtime_env_toolchain/: BUILD.bazel
tests/support/: sh_py_run_test.bzl
tests/toolchains/: BUILD.bazel  defs.bzl
tests/venv_site_packages_libs/: BUILD.bazel  bin.py
tools/: wheelmaker.py
tools/publish/: requirements_darwin.txt  requirements_linux.txt  requirements_universal.txt  requirements_windows.txt
(+27 files in other folders)
